[MTDSA-31123]: Make selfEmploymentBusinessId required in OAS

--- a/resources/public/api/conf/2.0/common/pathParameters.yaml
+++ b/resources/public/api/conf/2.0/common/pathParameters.yaml
@@ -28,6 +28,7 @@ components:
         type: string
         pattern: ^X[A-Z0-9]{1}IS[0-9]{11}$
         example: XAIS12345678910
+      required: true
     taxYear:
       name: taxYear
       in: path
