[MTDSA-31070]: Set v1 for business api deprecated

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -71,7 +71,8 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 api {
   # The status of the version of the API for the API Platform.
   1.0 {
-    status = "BETA"
+    status = "DEPRECATED"
+    deprecatedOn = "2025-10-16"
     endpoints {
         enabled = true
         api-released-in-production = true
