--- a/resources/public/api/conf/2.0/common/errors.yaml
+++ b/resources/public/api/conf/2.0/common/errors.yaml
@@ -96,10 +96,10 @@ components:
 
     ruleQuarterlyPeriodUpdating:
       description: |
-        Quarterly period type cannot be changed for the current year as the business is treated as commencing in the following year.
+        The quarterly period type cannot be changed when a business commencement date falls between 1st and 5th of April, and the current date is also within that date range but later than the business commencement date.
       value:
         code: RULE_QUARTERLY_PERIOD_UPDATING
-        message: Quarterly period type cannot be changed for the current year as the business is treated as commencing in the following year
+        message: The quarterly period type cannot be changed when a business commencement date falls between 1st and 5th of April, and the current date is also within that date range but later than the business commencement date
 
     ruleTaxYearNotEnded:
       description: |
