--- a/resources/public/api/conf/2.0/quarterly_period_type_create_amend.yaml
+++ b/resources/public/api/conf/2.0/quarterly_period_type_create_amend.yaml
@@ -16,7 +16,7 @@ put:
     | N/A - DEFAULT                    | Simulate a successful response.                                                                                                                                  |
     | BUSINESS_ID_NOT_FOUND	           | Simulates the scenario in which the business ID is not found.                                                                                                    |
     | BUSINESS_ID_STATE_CONFLICT       | Simulates the scenario in which the request conflicts with the current state of the business ID.                                                                 |
-    | QUARTERLY_PERIOD_UPDATING        | Simulates the scenario in which the quarterly period type cannot be changed for the current year as the business is treated as commencing in the following year. |
+    | QUARTERLY_PERIOD_UPDATING        | Simulates the scenario in which the quarterly period type cannot be changed when a business commencement date falls between 1st and 5th of April, and the current date is also within that date range but later than the business commencement date. |
     | STATEFUL                         | Performs a stateful create and update.                                                                                                                           |
 
   parameters:
