[MTDSA-32905]: Remove deprecated AccountingType

--- a/resources/public/api/conf/2.0/retrieve.yaml
+++ b/resources/public/api/conf/2.0/retrieve.yaml
@@ -13,9 +13,7 @@ get:
     | FOREIGN_PROPERTY | Simulate a successful response with a foreign-property business. <br/> Use the following businessId for this scenario: <br/> - XFIS12345678901 |
     | UNSPECIFIED | Simulate a successful response with a property-unspecified business. <br/> Use the following businessId for this scenario: <br/> - XAIS12345678901 |
     | NOT_FOUND | Simulate a scenario where no data is found. |
-    | DYNAMIC | Returns a dynamic response where the type of response will change corresponding to the businessId provided in the request: <br/> - For a response with a self-employment business, use businessId: <br/>   -- XBIS12345678901 (Accruals) <br/>   -- XBIS12345678902 (Cash) <br/> - For a response with a uk-property business, use businessId: <br/>   -- XPIS12345678901 (Accruals) <br/>   -- XPIS12345678902 (Cash) <br/> - For a response with a foreign-property business, use businessId: <br/>   -- XFIS12345678901 (Accruals) <br/>   -- XFIS12345678902 (Cash) <br/> - For a response with a property-unspecified business, use businessId: <br/>   -- XAIS12345678901 (Accruals) <br/>   -- XAIS12345678902 (Cash) |
-    | CASH | Simulate a scenario where the success response returns data associated with an accountingType of 'CASH'. <br/> Use the following businessId for this scenario: <br/> - XBIS12345678901 |
-    | ACCRUALS | Simulate a scenario where the success response returns data associated with an accountingType of 'ACCRUALS'. <br/> Use the following businessId for this scenario: <br/> - XBIS12345678901 |
+    | DYNAMIC | Returns a dynamic response where the type of response will change corresponding to the businessId provided in the request: <br/> - For a response with a self-employment business, use businessId: <br/>   -- XBIS12345678901 <br/> - For a response with a uk-property business, use businessId: <br/>   -- XPIS12345678901 <br/> - For a response with a foreign-property business, use businessId: <br/>   -- XFIS12345678901 <br/> - For a response with a property-unspecified business, use businessId: <br/>   -- XAIS12345678901 |
     | STATEFUL | Performs a stateful retrieve. |
 
   parameters:
@@ -36,11 +34,11 @@ get:
         X-CorrelationId:
           $ref: './common/headers.yaml#/components/parameters/correlationId'
         Deprecation:
-          $ref: ./common/headers.yaml#/components/parameters/deprecationHeader
+          $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
         Sunset:
-          $ref: ./common/headers.yaml#/components/parameters/sunsetHeader
+          $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
         Link:
-          $ref: ./common/headers.yaml#/components/parameters/linkHeader
+          $ref: './common/headers.yaml#/components/parameters/linkHeader'
       content:
         application/json:
           schema:
@@ -56,11 +54,11 @@ get:
         X-CorrelationId:
           $ref: './common/headers.yaml#/components/parameters/correlationId'
         Deprecation:
-          $ref: ./common/headers.yaml#/components/parameters/deprecationHeader
+          $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
         Sunset:
-          $ref: ./common/headers.yaml#/components/parameters/sunsetHeader
+          $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
         Link:
-          $ref: ./common/headers.yaml#/components/parameters/linkHeader
+          $ref: './common/headers.yaml#/components/parameters/linkHeader'
       content:
         application/json:
           schema:
@@ -79,11 +77,11 @@ get:
         X-CorrelationId:
           $ref: './common/headers.yaml#/components/parameters/correlationId'
         Deprecation:
-          $ref: ./common/headers.yaml#/components/parameters/deprecationHeader
+          $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
         Sunset:
-          $ref: ./common/headers.yaml#/components/parameters/sunsetHeader
+          $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
         Link:
-          $ref: ./common/headers.yaml#/components/parameters/linkHeader
+          $ref: './common/headers.yaml#/components/parameters/linkHeader'
       content:
         application/json:
           schema:
@@ -98,11 +96,11 @@ get:
         X-CorrelationId:
           $ref: './common/headers.yaml#/components/parameters/correlationId'
         Deprecation:
-          $ref: ./common/headers.yaml#/components/parameters/deprecationHeader
+          $ref: './common/headers.yaml#/components/parameters/deprecationHeader'
         Sunset:
-          $ref: ./common/headers.yaml#/components/parameters/sunsetHeader
+          $ref: './common/headers.yaml#/components/parameters/sunsetHeader'
         Link:
-          $ref: ./common/headers.yaml#/components/parameters/linkHeader
+          $ref: './common/headers.yaml#/components/parameters/linkHeader'
       content:
         application/json:
           schema:
